[project]
name = "bookbot"
version = "0.1.0"
description = "Toy project from Bootdev to get started on projects"
authors = [
    {name = "kritarth5",email = "kritarth5@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
